# indent

./: .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  README.vc++  VMS-README  acconfig.h  args.c  args.h  backup.c  backup.h  bootstrap  comments.c  config.h.in  config.h.vc++  config.h.vms  configure.ac  configure.in  globs.c  globs.h  gnuc-make.com  gperf-cc.c  gperf.c  indent-cc.gperf  indent.1  indent.c  indent.dsp  indent.gperf  indent.h  indent.texinfo  indent_foot.html  indent_toc.html  io.c  io.h  lexi.c  lexi.h  (+8 more)
aclocal/: UTIMBUF.m4
doc/: Makefile.am  indent.texi  indent.texinfo  stamp-vti  version.texi
intl/: plural.c
m4/: ChangeLog
man/: Makefile.am  indent.1  indent.1.in  texinfo2man.c
miscel/: Makefile.mingw32  README.VMS  README.in  README.vc++  make-decc.com  makefile.watcom
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ca.po  da.po  de.po  eo.po  et.po  fi.po  fr.po  gl.po  hu.po  indent.pot  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  zh_TW.Big5.po
regression/: Makefile  TEST  TIME  already-starred.c  backup.c  brackets.c  class-func.cc  comments1.c  comments2.c  cp-indent.c  cplus-one.c  do.c  else-comment.c  emacs-compatible.h  empty.c  goto.c  ind-star.c  kr-proc-decls.c  line-break-comment.c  ncs-on-return.c  ncs.c  no-newline.c  no-newline3.c  on-off-2.c  one-line-3.c  pr_comment.c  preesc-comment.c  right-margin-comment.c  sob.c  struct_param.c
regression/input/: align-with-spaces.c  args.c  backup.h  bad-break.c  bad-comment.c  bbb-test.c  bbreak.c  block-comments.c  box-comm.c  boxed.c  braces.c  bug-gnu-33364.c  case.c  cdb.c  combuf-heap-corruption  comment-break.c  comments.c  comments3.c  comments4.c  compound-initializers.c  const.c  continue.c  cplus.c  decl_block.c  dirent_def.h  do-cdw.c  dont-line-up-parentheses.c  dont-tab-align-comments.c  elif.c  elipsis-attribute.c  else-comment-2.c  else-if.c  embedded-cuddle1.c  embedded-cuddle2.c  enum.c  first-in-block.c  float-constant-suffix.c  for.c  fp.c  func-def.c  (+50 more)
regression/outstanding-problems/: two-on-line.c
regression/standard/: align-with-spaces.c  already-starred.c  args.c  backup.c  bad-break.c  bad-comment.c  bbb-test.c  bbreak.c  block-comments.c  box-comm.c  boxed.c-4  boxed.c-5  boxed.c-6  boxed.c-8  boxed.c-9  brackets.c  brackets33.c  brackets34.c  brackets35.c  brackets38.c  bug-gnu-33364.c  bug-hp.c  bug206785.err  c99-compound-literal.c  case-br.c  case-label.c  case.c  cdb.c  comment-break.c  comments.c  comments1-fca.c  comments1.c  comments2.c  comments3.c  comments4.c  compound-initializers.c  const.c  continue-lp.c  continue.c  cp-indent.c  (+107 more)
src/: Makefile.am  args.c  args.h  backup.c  backup.h  code_io.c  code_io.h  comments.c  comments.h  config.h.vc++  config.h.vms  globs.c  globs.h  gperf-cc.c  gperf.c  handletoken.c  handletoken.h  indent-cc.gperf  indent.c  indent.dsp  indent.gperf  indent.h  io.c  io.h  lexi.c  lexi.h  output.c  output.h  parse.c  parse.h  sys.h  utils.c  utils.h  wildexp.c
